--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,3 +12,40 @@ div[ng-controller=LayerHeatmapCtrl] #panel{
   padding: 5px;
   border: 1px solid #999;
 }
+
+social footer.social:hover {
+     -webkit-transform: scale(1.1);
+     -moz-transform: scale(1.1);
+     -o-transform: scale(1.1);
+ }
+ .social {
+     -webkit-transform: scale(0.8);
+     /* Browser Variations: */
+
+     -moz-transform: scale(0.8);
+     -o-transform: scale(0.8);
+     -webkit-transition-duration: 0.5s;
+     -moz-transition-duration: 0.5s;
+     -o-transition-duration: 0.5s;
+ }
+
+/*
+    Multicoloured Hover Variations
+*/
+ #social-tw:hover {
+     color: #4099FF;
+ }
+ #social-gp:hover {
+     color: #d34836;
+ }
+ #social-em:hover {
+     color: #f39c12;
+ }
+
+ footer {
+    bottom: 0;
+    height: 4em;
+    left: 0;
+    position: fixed;
+    width:100%;
+}
