--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,9 +1,12 @@
-#map-canvas
-{
-  width:500px;
-  height:400px;
+#map-canvas {
+  height: 80vh;
 }
-.search { 
+
+#sidepanel {
+  height: 80vh;
+}
+
+.search {
   font-family: sans-serif
 };
 
@@ -11,29 +14,9 @@
 a { color: #4B58A6; }
 a:hover { color: #4B58A6; }
 
-#map_canvas img {
+#map-canvas img {
   max-width: none;
 }
-
-.filter-box {
-  height: 15px;
-  width: 15px;
-  display: inline-block;
-  *border-right-width: 2px;
-  *border-bottom-width: 2px;
-  -webkit-border-radius: 5px;
-     -moz-border-radius: 5px;
-          border-radius: 5px;
-  -webkit-background-clip: padding-box;
-     -moz-background-clip: padding;
-          background-clip: padding-box;
-}
-
-.filter-yellow { background-color: #FBF358; }
-.filter-green { background-color: #00E13C; }
-.filter-blue { background-color: #5781FC; }
-.filter-purple { background-color: #7C54FB; }
-.filter-red { background-color: #FB6353; }
 
 canvas {-ms-touch-action: double-tap-zoom;}
 
@@ -68,8 +51,9 @@ canvas {-ms-touch-action: double-tap-zoom;}
 
  footer {
     bottom: 0;
-    height: 4em;
+    height: 40px;
     left: 0;
     position: fixed;
     width:100%;
+    background-color: dimgrey;
 }
