--- a/src/css/main.css
+++ b/src/css/main.css
@@ -57,3 +57,8 @@ canvas {-ms-touch-action: double-tap-zoom;}
     width:100%;
     background-color: dimgrey;
 }
+
+.item {
+  height: 100vh;
+  width: 100vw;
+}
