--- a/src/css/main.css
+++ b/src/css/main.css
@@ -62,3 +62,17 @@ canvas {-ms-touch-action: double-tap-zoom;}
   height: 100vh;
   width: 100vw;
 }
+
+#splash-input {
+  position: absolute;
+  left: 46vw;
+  top: 40vh;
+}
+
+.transparent{
+  background:rgba(50, 50, 50, 0.6);
+}
+
+.white{
+  background:rgba(255, 255, 255, 0.2);
+}
