Image fill splash.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -10,6 +10,11 @@
   height: 80vh;
 }
 
+#splash-img {
+  object-fit: cover;
+  overflow: hidden;
+}
+
 .search {
   font-family: sans-serif
 };
@@ -74,7 +79,7 @@ canvas {-ms-touch-action: double-tap-zoom;}
   position: absolute;
   width: 100vw;
   height: 40vh;
-  top: -3vh;
+  top: -2.5vh;
   left: 0;
 }
 
