--- a/src/css/main.css
+++ b/src/css/main.css
@@ -11,6 +11,11 @@
 }
 
 #splash-img {
+  position: fixed;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  min-height: 100%;
   object-fit: cover;
   overflow: hidden;
 }
@@ -68,8 +73,11 @@ canvas {-ms-touch-action: double-tap-zoom;}
 }
 
 #splash-input {
+  padding: 4px;
+  background-color: dimgrey;
+  border: 3px solid darkgrey;
   position: absolute;
-  left: 46vw;
+  left: 40vw;
   top: 40vh;
 }
 
@@ -78,7 +86,7 @@ canvas {-ms-touch-action: double-tap-zoom;}
   background:rgba(50, 50, 50, 0.6);
   position: absolute;
   width: 100vw;
-  height: 40vh;
+  height: 100vh;
   top: -2vh;
   left: 0;
 }
@@ -87,10 +95,14 @@ canvas {-ms-touch-action: double-tap-zoom;}
   background:rgba(255, 255, 255, 0.2);
 }
 
-#splash-img {
-  z-index: -5;
-}
-
 #auto-input {
   width: 200px;
+}
+
+#legend {
+  font-family: Arial, sans-serif;
+  background: #fff;
+  padding: 10px;
+  margin: 10px;
+  border: 3px solid #000;
 }
